# DEC-Project-2

./: .gitignore  README.md  requirements.txt
analytics/: pyproject.toml
analytics/analytics/: definitions.py
integrate/source/: enable_cdc.sql  im3_setup.sql
integrate/source/im3_open_source_data_center_atlas_v2026.02.09/: im3_open_source_data_center_atlas_v2026.02.09.gpkg
orchestrate/dagster/: README.md  pyproject.toml  template.env
orchestrate/dagster/analytics/: definitions.py
orchestrate/dagster/analytics/assets/: airbyte.py  dbt.py
orchestrate/dagster/analytics/resources/: snowflake.py
transform/dbt_transforms/: .user.yml  dbt_project.yml  profiles.yml
transform/dbt_transforms/models/marts/composite/: data_center_atlas_obt.sql  data_center_atlas_obt.yml  dca_sep_obt.sql  dca_sep_obt.yml  state_electricity_profiles_obt.sql  state_electricity_profiles_obt.yml
transform/dbt_transforms/models/marts/factdim/: dim_date.sql  dim_state.sql  fact_new_datacenters.sql  fact_new_datacenters.yaml  fact_new_datacenters_snapshot.sql
transform/dbt_transforms/models/sources/: sources.yml
transform/dbt_transforms/models/staging/datacenters/: data_center_atlas.sql  data_center_atlas_scd.sql
transform/dbt_transforms/models/staging/electricity/: state_electricity_profiles.sql
transform/dbt_transforms/models/staging/scd_datacenters/: operator_history.sql  (+1 more)
transform/dbt_transforms/tests/generic/: assert_datacenter_type.sql  assert_differing_col_values.sql  column_greater_or_equal.sql  date_inclusive_between.sql  single_distinct_value.sql
