[project]
name = "analytics"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10,<3.15"
dependencies = [
    "dagster",
    "dagster-cloud",
    "dagster-airbyte", 
    "dagster-dbt", 
    "dbt-core", 
    "dbt-snowflake",
    "loguru",
    "dagster-snowflake"
]

[project.optional-dependencies]
dev = [
    "dagster-dg-cli>=1.11.11",
    "dagster-webserver",
    "pytest",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.dagster]
module_name = "analytics.definitions"
code_location_name = "analytics"

[tool.setuptools.packages.find]
exclude=["analytics_tests"]
